--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit
-yfinance==0.2.40
-pandas
-plotly
-kaleido
-ollama
+streamlit>=1.34.0
+yfinance>=0.2.36
+pandas>=2.2.2
+plotly>=5.21.0
+kaleido>=0.2.1
+python-dotenv>=1.0.1
+google-generativeai>=0.4.1
+ollama>=0.1.0
